--- a/styles.css
+++ b/styles.css
@@ -281,6 +281,7 @@ transform: translateY(-50%);
     background-color:transparent ;
     border: none;
     outline: none;
+    cursor: pointer;
  }
 
  .tooltip{
